Added mega menu to header

--- a/index.html
+++ b/index.html
@@ -74,50 +74,81 @@
                                                 <div class="wrapper">
                                                     <div class="flexcol">
                                                         <div class="row">
-                                                            <h4></h4>
+                                                            <h4>Women's Clothing</h4>
                                                             <ul>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
+                                                                <li><a href="#">Dresses</a></li>
+                                                                <li><a href="#">Tops & Tees</a></li>
+                                                                <li><a href="#">Jackets & Coats</a></li>
+                                                                <li><a href="#">Pants & Capris</a></li>
+                                                                <li><a href="#">Sweaters</a></li>
+                                                                <li><a href="#">Costumes</a></li>
+                                                                <li><a href="#">Hoodies & Sweatshirts</a></li>
+                                                                <li><a href="#">Pajamas & Robes</a></li>
+                                                                <li><a href="#">Shorts</a></li>
+                                                                <li><a href="#">Swimwear</a></li>
                                                             </ul>
                                                         </div>
                                                     </div>
                                                     <div class="flexcol">
                                                         <div class="row">
-                                                            <h4></h4>
+                                                            <h4>Jewelery</h4>
                                                             <ul>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
+                                                                <li><a href="#">Accessories</a></li>
+                                                                <li><a href="#">Bags & Purses</a></li>
+                                                                <li><a href="#">Necklaces</a></li>
+                                                                <li><a href="#">Rings</a></li>
+                                                                <li><a href="#">Earrings</a></li>
+                                                                <li><a href="#">Bracelets</a></li>
+                                                                <li><a href="#">Body Jewelery</a></li>
                                                             </ul>
                                                         </div>
                                                     </div>
                                                     <div class="flexcol">
                                                         <div class="row">
-                                                            <h4></h4>
+                                                            <h4>Beauty</h4>
                                                             <ul>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
+                                                                <li><a href="#">Bath Accessories</a></li>
+                                                                <li><a href="#">Makeup & Cosmetics</a></li>
+                                                                <li><a href="#">Skin Care</a></li>
+                                                                <li><a href="#">Hair Care</a></li>
+                                                                <li><a href="#">Essential Oils</a></li>
+                                                                <li><a href="#">Fragrances</a></li>
+                                                                <li><a href="#">Soaps & Bath Bombs</a></li>
+                                                                <li><a href="#">Face Masks & Coverings</a></li>
+                                                                <li><a href="#">Spa Kits & Gifts</a></li>
                                                             </ul>
                                                         </div>
                                                     </div>
                                                     <div class="flexcol">
                                                         <div class="row">
-                                                            <h4></h4>
-                                                            <ul>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
-                                                                <li><a href=""></a></li>
+                                                            <h4>Top Brands</h4>
+                                                            <ul class="women-brands">
+                                                                <li><a href="#">Nike</a></li>
+                                                                <li><a href="#">Louis Vuitton</a></li>
+                                                                <li><a href="#">Hermes</a></li>
+                                                                <li><a href="#">Gucci</a></li>
+                                                                <li><a href="#">Zalando</a></li>
+                                                                <li><a href="#">Tiffany & Co.</a></li>
+                                                                <li><a href="#">Zara</a></li>
+                                                                <li><a href="#">H&M</a></li>
+                                                                <li><a href="#">Cartier</a></li>
+                                                                <li><a href="#">Chanel</a></li>
+                                                                <li><a href="#">Hurley</a></li>
                                                             </ul>
+                                                            <a href="#" class="view-all">View all brands</a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="flexcol products">
+                                                        <div class="row">
+                                                            <div class="media">
+                                                                <div class="thumbnail">
+                                                                    <img src="assets/products/apparel4.jpg" alt="">
+                                                                </div>
+                                                            </div>
+                                                            <div class="text-content">
+                                                                <h4>Most wanted!</h4>
+                                                                <a href="#" class="primary-button">Order Now</a>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
