--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <ul class="flexitem second-links">
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">Shop</a></li>
-                                    <li>
+                                    <li class="has-child">
                                         <a href="#">Women
                                             <div class="icon-small"><i class="ri-arrow-down-s-line"></i></div>
                                         </a>
@@ -135,14 +135,17 @@
                                                                 <li><a href="#">Chanel</a></li>
                                                                 <li><a href="#">Hurley</a></li>
                                                             </ul>
-                                                            <a href="#" class="view-all">View all brands</a>
+                                                            <a href="#" class="view-all">View all brands <i class="ri-arrow-right-line"></i>
+                                                            </a>
                                                         </div>
                                                     </div>
                                                     <div class="flexcol products">
                                                         <div class="row">
                                                             <div class="media">
-                                                                <div class="thumbnail">
-                                                                    <img src="assets/products/apparel4.jpg" alt="">
+                                                                <div class="thumbnail object-cover">
+                                                                    <a href="#">
+                                                                        <img src="assets/products/apparel4.jpg" alt="">
+                                                                    </a>
                                                                 </div>
                                                             </div>
                                                             <div class="text-content">
@@ -188,6 +191,14 @@
                 </div>
             </div>
 
+            <div class="header-main mobile-hide">
+                <div class="container">
+                    <div class="wrapper flexitem">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
         </header>
         <!-- Header -->
 
