Main - Slider - Responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,24 @@
     <title>Ecommerce Website</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
 </head>
+
 <body>
 
     <div id="page" class="site">
+
+        <aside class="site-off desktop-hide">
+            <div class="off-canvas">
+                <div class="canvas-head flexitem">
+                    <div class="logo"><a href="/"><span class="circle"></span>.Store</a></div>
+                    <a href="#" class="t-close flexcenter"><i class="ri-close-line"></i></a>
+                </div>
+                <div class="departments"></div>
+                <nav></nav>
+                <div class="thetop-nav"></div>
+            </div>
+        </aside>
 
         <header>
             <div class="header-top mobile-hide">
@@ -30,7 +45,8 @@
                                 <li><a href="#">Sign Up</a></li>
                                 <li><a href="#">My Account</a></li>
                                 <li><a href="#">Order Tracking</a></li>
-                                <li><a href="#">USD <span class="icon-small"><i class="ri-arrow-down-s-line"></i></span></a>
+                                <li><a href="#">USD <span class="icon-small"><i
+                                                class="ri-arrow-down-s-line"></i></span></a>
                                     <ul>
                                         <li class="current"><a href="#">USD</a></li>
                                         <li><a href="#">EURO</a></li>
@@ -38,7 +54,8 @@
                                         <li><a href="#">IDR</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">English <span class="icon-small"><i class="ri-arrow-down-s-line"></i></span></a>
+                                <li><a href="#">English <span class="icon-small"><i
+                                                class="ri-arrow-down-s-line"></i></span></a>
                                     <ul>
                                         <li class="current"><a href="#">English</a></li>
                                         <li><a href="#">German</a></li>
@@ -68,7 +85,7 @@
                                         <a href="#">Women
                                             <div class="icon-small"><i class="ri-arrow-down-s-line"></i></div>
                                         </a>
-                                        
+
                                         <div class="mega">
                                             <div class="container">
                                                 <div class="wrapper">
@@ -135,7 +152,8 @@
                                                                 <li><a href="#">Chanel</a></li>
                                                                 <li><a href="#">Hurley</a></li>
                                                             </ul>
-                                                            <a href="#" class="view-all">View all brands <i class="ri-arrow-right-line"></i>
+                                                            <a href="#" class="view-all">View all brands <i
+                                                                    class="ri-arrow-right-line"></i>
                                                             </a>
                                                         </div>
                                                     </div>
@@ -170,21 +188,21 @@
                         <div class="right">
                             <ul class="flexitem second-links">
                                 <li class="mobile-hide"><a href="#">
-                                    <div class="icon-large"><i class="ri-heart-line"></i></div>
-                                    <div class="fly-item"><span class="item-number">0</span></div>
-                                </a></li>
+                                        <div class="icon-large"><i class="ri-heart-line"></i></div>
+                                        <div class="fly-item"><span class="item-number">0</span></div>
+                                    </a></li>
                                 <li><a href="#" class="iscart">
 
-                                    <div class="icon-large">
-                                        <i class="ri-shopping-cart-line"></i>
-                                        <div class="fly-item"><span class="item-number">0</span></div>
-                                    </div>
+                                        <div class="icon-large">
+                                            <i class="ri-shopping-cart-line"></i>
+                                            <div class="fly-item"><span class="item-number">0</span></div>
+                                        </div>
 
-                                    <div class="icon-text">
-                                        <div class="mini-text">Total</div>
-                                        <div class="cart-total">$0.00</div>
-                                    </div>
-                                </a></li>
+                                        <div class="icon-text">
+                                            <div class="mini-text">Total</div>
+                                            <div class="cart-total">$0.00</div>
+                                        </div>
+                                    </a></li>
                             </ul>
                         </div>
                     </div>
@@ -280,6 +298,7 @@
                                                 Health & Household
                                             </a>
                                         </li>
+
                                         <li class="has-child homekit">
                                             <a href="#">
                                                 <div class="icon-large"><i class="ri-home-8-line"></i></div>
@@ -344,14 +363,16 @@
                                                             <li><a href="#">Poolhouse</a></li>
                                                         </ul>
                                                     </div>
-                                            </div>
+                                                </div>
                                         </li>
+   
                                         <li class="has-child fashion">
                                             <a href="#">
                                                 <div class="icon-large"><i class="ri-android-line"></i></div>
                                                 Pet Supplies
                                             </a>
                                         </li>
+
                                         <li class="has-child fashion">
                                             <a href="#">
                                                 <div class="icon-large"><i class="ri-basketball-line"></i></div>
@@ -385,12 +406,83 @@
         </header>
         <!-- Header -->
 
-        <main></main>
+        <main>
+            <div class="slider">
+                <div class="container">
+                    <div class="wrapper">
+                        <div class="myslider swiper">
+                            <div class="swiper-wrapper">
+
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="assets/slider/slider0.jpg" alt="">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Shoes Fashion</h4>
+                                            <h2><span>Come and Get it!</span><br><span>Brand New Shoes</span></h2>
+                                            <a href="#" class="primary-button">Shop Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="assets/slider/slider1.jpg" alt="">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Quick Fashion</h4>
+                                            <h2><span>Fit Your Wardrobe</span><br><span>With Luxury Items</span></h2>
+                                            <a href="#" class="primary-button">Shop Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="assets/slider/slider2.jpg" alt="">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Quick Offer</h4>
+                                            <h2><span>Wooden Minimal Sofa</span><br><span>Extra 50% off</span></h2>
+                                            <a href="#" class="primary-button">Shop Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="assets/slider/slider3.jpg" alt="">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Best Deals</h4>
+                                            <h2><span>Home Workout Accessories</span><br><span>Push The Limit</span></h2>
+                                            <a href="#" class="primary-button">Shop Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-pagination">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+
+
+        </main>
         <!-- Main -->
 
         <footer></footer>
         <!-- Footer -->
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
